fixed overflow on edit entry search

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -269,12 +269,13 @@ p {
 
 .bookimage {
     max-height: 150px;
+    max-width: 120px;
     float: left;
     user-select: none;
     border-radius: 2px;
     box-shadow: 0px 0px 14px -4px var(--teal);
     /*padding: 4px;*/
-    height: 100%;
+    height: auto;
 }
 
 #search-input {
